<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                app:srcCompat="@drawable/logo_login"
                tools:srcCompat="@drawable/logo_login" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:drawableEnd="@drawable/edit"
                android:drawableRight="@drawable/edit"
                android:hint="@string/first_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtLName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:drawableEnd="@drawable/edit"
                android:drawableRight="@drawable/edit"
                android:hint="@string/last_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtPhone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:drawableEnd="@drawable/phone"
                android:drawableRight="@drawable/phone"
                android:hint="@string/phone_number"
                android:inputType="phone" />

            <EditText
                android:id="@+id/txtUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="7"
                android:drawableEnd="@drawable/user"
                android:drawableRight="@drawable/user"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/txtPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:drawableEnd="@drawable/password"
                android:drawableRight="@drawable/password"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtStartMoorning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/time"
                    android:drawableRight="@drawable/time"
                    android:ems="10"
                    android:hint="@string/start_moorning"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txtEndMoorning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/time"
                    android:drawableRight="@drawable/time"
                    android:ems="10"
                    android:hint="@string/end_moorning"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <EditText
                    android:id="@+id/txtStartEvening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/time"
                    android:drawableRight="@drawable/time"
                    android:ems="10"
                    android:hint="@string/start_evening"
                    android:inputType="text" />

                <EditText
                    android:id="@+id/txtEndEvening"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:drawableEnd="@drawable/time"
                    android:drawableRight="@drawable/time"
                    android:ems="10"
                    android:hint="@string/end_evening"
                    android:inputType="text" />

            </LinearLayout>

            <Button
                android:id="@+id/btnRegister2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/buttons_style"
                android:onClick="register"
                android:text="@string/register" />

            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/buttons_style"
                android:onClick="back"
                android:text="@string/back" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="8"
                android:background="@drawable/style_word"
                android:gravity="center"
                android:onClick="login"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:text="@string/ihave_account"
                android:textSize="20sp"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>