<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="15dp"
    android:background="@drawable/logo3"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtProductSearchable"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="5"
            android:drawableStart="@drawable/search"
            android:drawableLeft="@drawable/search"
            android:ems="10"
            android:hint="@string/search_here"
            android:inputType="textPersonName" />

        <ImageButton
            android:id="@+id/speachSearch"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_style"
            android:onClick="searchWithSpeach"
            app:srcCompat="@drawable/mic16px"
            tools:srcCompat="@drawable/mic16px" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/order_by"
            android:textColor="#0A0A0A"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/alphabetRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:checked="true"
                android:text="@string/alphabet" />

            <RadioButton
                android:id="@+id/priceRadio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_price" />

        </RadioGroup>

        <Button
            android:id="@+id/btnClearHistoru"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/buttons_style"
            android:onClick="clearHistory"
            android:padding="5dp"
            android:text="@string/clear_history"
            android:textSize="8sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ListView
            android:id="@+id/searchableProductsListView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0">

        </ListView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_style"
            android:onClick="register"
            android:text="@string/register" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_style"
            android:onClick="login"
            android:text="@string/login" />

        <Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/buttons_style"
            android:onClick="about_us"
            android:text="@string/about" />
    </LinearLayout>

</LinearLayout>